--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "psr-detect-violations": "./vendor/bin/phpcs src/ tests/",
+        "psr-auto-correct": "./vendor/bin/phpcbf src/ tests/",
+        "test": "./vendor/bin/phpunit tests/ --testdox"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -70,7 +73,12 @@
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "*",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
         "symfony/maker-bundle": "^1.62",
+        "symfony/phpunit-bridge": "^7.2",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
